--- a/scss/style.scss
+++ b/scss/style.scss
@@ -790,8 +790,32 @@ body {
                 }
             }
         }
+        .art-spacesFilter {
+            margin-top: 15px;
+            margin-bottom: 30px;
 
+            .row.justify-content-center {
+                margin-left: -5px;
+                margin-right: -5px;
 
+                >[class*="col"] {
+                    padding-left: 5px;
+                    padding-right: 5px;
+
+                    .catBox.filter-button {
+                        border-radius: 0px;
+                        background-color: #c2c2c2;
+                        font-size: 16px;
+                        font-weight: normal;
+                        color: #fff;
+
+                        &.active {
+                            background-color: #000;
+                        }
+                    }
+                }
+            }
+        }
     }
    
 }
