--- a/scss/style.scss
+++ b/scss/style.scss
@@ -67,12 +67,6 @@ body {
             border-color: #2f2f31;
             color: #fff;
         }
-
-        &.btn-primary {
-            background-color: #756aee;
-            border-color: #756aee;
-            color: #fff;
-        }
     }
 
     .cursor {
@@ -92,6 +86,7 @@ body {
         }
     }
 
+    
     header.mainHeader {
         nav.navbar {
             transition: all 0.5s linear;
@@ -1076,6 +1071,9 @@ body {
                     margin-top: 0px;
                     li{
                         margin-bottom: 15px;
+                        a{
+                            color: #c4b5b5;
+                        }
                     }
                 }
                 .btn{
@@ -1152,6 +1150,14 @@ body {
                                 width:calc(41.666667% - 10px);
                             }
                         }
+                        i{
+                            position: absolute;
+                            bottom: 12px;
+                            right: 12px;
+                            color: #fff;
+                            z-index: 1;
+                            font-size: 26px;
+                        }
                     }
                 }
                 .list-unstyled{
@@ -1188,6 +1194,54 @@ body {
                     }
                 }
             }
+            &.photoDetails-Section{
+                ul.shareSocialLink{
+                    margin: 10px 0 20px;
+                    padding: 0;
+                    list-style: none;
+                    display: flex;
+                    justify-content: flex-end;
+                    li {
+                        &:nth-of-type(1n+2) {
+                            margin-left: 10px;
+                        }
+                        @media(max-width:767px){
+                            &:nth-of-type(1n+2) {
+                                margin-left: 5px;
+                            }
+                        }
+                        a {
+                            text-decoration: none;
+                            font-size: 16px;
+                            color: #fff;
+                            background-color: #000;
+                            display: block;
+                            width: 32px;
+                            height: 32px;
+                            border-radius: 32px;
+                            text-align: center;
+                            line-height: 32px;
+                            @media(max-width:767px){
+                                font-size: 12px;
+                                width: 26px;
+                                height: 26px;
+                                line-height: 26px;
+                            }
+                        }
+                    }
+                }
+                .list-unstyled{
+                    margin-top: 0px;
+                    @media(max-width:767px){
+                        margin-bottom: 30px;
+                    }
+                    li{
+                        margin-bottom: 15px;
+                    }
+                }
+            }
         }
     }    
 }
+
+
