--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1242,6 +1242,45 @@ body {
             }
         }
     }    
+    #thankYouModal.modal{
+        .modal-dialog{
+            max-width: 640px;
+            height: 307px;
+            .modal-body{
+                max-width: 640px;
+                height: 307px;
+                background-image:url(../images/thankyoubg.jpg);
+                color:#fff;
+                padding: 24px;
+                a{
+                    color:#fff;
+                    &:hover,
+                    &:focus,
+                    &:active{
+                        opacity: 0.7;
+                    }
+                }
+                .mainlogo{
+                    position: absolute;
+                    padding: 0;
+                    bottom: 24px;
+                    right: 24px;
+                    @media(max-width:767px){
+                        img{
+                            height: 50px;
+                        }
+                    }
+                }
+                .btn.btn-dark{
+                    position: absolute;
+                    top: 0;
+                    right:0;
+                    font-family: 'Dharma Gothic E';
+                    font-size: 20px;
+                    letter-spacing: 2px;
+                    font-weight: bold;
+                }
+            }
+        }
+    }
 }
-
-
