--- a/scss/style.scss
+++ b/scss/style.scss
@@ -24,7 +24,7 @@ html {
 }
 
 body {
-    font-family: 'Century Gothic';
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
 
@@ -34,11 +34,11 @@ body {
     h4,
     h5,
     h6 {
-        font-family: 'Century Gothic';
+        font-family: 'Roboto', sans-serif;
     }
 
     p {
-        font-family: 'Century Gothic';
+        font-family: 'Roboto', sans-serif;
         font-size: 0.9rem;
     }
 
@@ -53,7 +53,7 @@ body {
 
     .btn {
         font-size: 16px;
-        font-family: 'Century Gothic';
+        font-family: 'Roboto', sans-serif;
         border-radius: 0;
         font-weight: 400;
 
