--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2267,280 +2267,40 @@ body {
 
 
 
-
-
-.next-page ul {
-
-
-
-    margin-top: 20px;
-  
-  
-  
-    float: left;
-  
-  
-  
-    list-style: none;
-  
-  
-  
-  }
-  
-  
-  
-  
-  
-  
-  
-  .next-page ul li {
-  
-  
-  
-    font-family: 'Oswald', sans-serif;
-  
-  
-  
-    font-size: 12px;
-  
-  
-  
-    font-weight: 400;
-  
-  
-  
-    color: #eeeeee;
-  
-  
-  
-    line-height: 28px;
-  
-  
-  
-    width: 23px;
-  
-  
-  
-    height: 27px;
-  
-  
-  
-    float: left;
-  
-  
-  
-    margin-left: 5px;
-  
-  
-  
-    text-align: center;
-  
-  
-  
-    background-color: #4e4e4e;
-  
-  
-  
-    cursor: pointer;
-  
-  
-  
-    -webkit-transition: color, background-color 0.2s ease-in-out;
-  
-  
-  
-    -moz-transition: color, background-color 0.2s ease-in-out;
-  
-  
-  
-    -ms-transition: color, background-color 0.2s ease-in-out;
-  
-  
-  
-    -o-transition: color, background-color 0.2s ease-in-out;
-  
-  
-  
-    transition: color, background-color 0.2s ease-in-out;
-  
-  
-  
-      /* div padding fix */
-  
-  
-  
-    -webkit-box-sizing: border-box;
-  
-  
-  
-   /* Safari/Chrome, other WebKit */
-  
-  
-  
-    -moz-box-sizing: border-box;
-  
-  
-  
-      /* Firefox, other Gecko */
-  
-  
-  
-    box-sizing: border-box;
-  
-  
-  
-           /* Opera/IE 8+ */;
-  
-  
-  
-  }
-  
-  
-  
-  
-  
-  
-  
-  .next-page ul li a {
-  
-  
-  
-    color: #FFFFFF;
-  
-  
-  
-  }
-  
-  
-  
-  
-  
-  
-  
-  .next-page ul li:hover,
-  
-  
-  
-  .next-page ul li a:hover,
-  
-  
-  
-  .next-page .page-active {
-  
-  
-  
-    color: #ffffff;
-  
-  
-  
-    background-color: #36bfc4;
-  
-  
-  
-  }
-  
-  
-  
-  
-  
-  
-  
-  .next {
-  
-  
-  
-    background: url(../images/next.png) no-repeat center;
-  
-  
-  
-  }
-  
-  
-  
-  
-  
-  
-  
-  .next:hover {
-  
-  
-  
-    background: url(../images/next-white.png) no-repeat center;
-  
-  
-  
-  }
-  
-
-.pagNumActive {
-
-    color: #000;
-
-    border:#999999 1px solid; background-color: #3d3d3d; padding-left:3px; color:#FFFFFF; padding-right:3px;
-
-}
-
-.paginationNumbers a:link {
-
-    color: #000;
-
-    text-decoration: none;
-
-    border:#999 1px solid; background-color:#F0F0F0; padding-left:3px; padding-right:3px;
-
-}
-
-.paginationNumbers a:visited {
-
-    color: #000;
-
-    text-decoration: none;
-
-    border:#999 1px solid; background-color:#F0F0F0; padding-left:3px; padding-right:3px;
-
-}
-
-.paginationNumbers a:hover {
-
-    color: #000;
-
-    text-decoration: none;
-
-    border:#060 1px solid; background-color: #3d3d3d; color:#FFFFFF; padding-left:3px; padding-right:3px;
-
-}
-
-.paginationNumbers a:active {
-
-    color: #000;
-
-    text-decoration: none;
-
-    border:#999 1px solid; background-color:#F0F0F0; padding-left:3px; padding-right:3px;
-
-}
-
-.pagenav{
-
-    margin-top:5px !important;
-    
-    margin-bottom:5px !important;
-    
+.paginationBox{
+    ul{
+        margin: 30px 0 60px;
+        padding: 0;
+        list-style: none;
+        display: flex;
+        justify-content:center;
+        align-items: flex-start;
+        li{
+            .pageitem{
+                background-color: transparent;
+                color:#000;
+                font-weight: 600;
+                font-size:15px;
+                line-height: 15px;
+                padding:5px;
+                display: inline-flex;
+                line-height: 25px;
+                text-decoration: none;
+                &.gotopreviews,
+                &.gotonext{
+                    font-size:17px;
+                    display: none;
+                }
+                &:hover{
+                    opacity: 0.5;
+                }
+                &.active{
+                    opacity: 0.5;
+                }
+            }
+            &:nth-of-type(1n+2):before{
+                content: "/";
+            }
+        }
     }
-
-    
-.pagenav {
-
-    display: none !important;;
-  
-  }
-  
-.next-page ul li {
-
-    background-color: white !important;
-    
-        
-    
-    }
-  
-
+}
